--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_mlkit_face_detection: ^0.7.0
+  camera: ^0.10.5+2
+  image_picker: ^1.0.0
+  object_3d: ^0.0.1
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +63,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/ml/
+    - assets/mask.png
+    - assets/heal.jpg
+    - assets/oxgen.png
+    - assets/R.png
+    - assets/sad.png
+    - assets/happy.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
